--- a/style.css
+++ b/style.css
@@ -5,10 +5,33 @@
     font-family: "Poppins", sans-serif;
 }
 
-body{
+body {
     padding: 20px 100px;
+}    
+
+.conteudo{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
+.box-text {
+    width: 600px ;
+}
+
+.box-imagem {
+  width: 600px;  
+  display: flex;
+  justify-content: flex-end;
+  /* margin-top: 250px; */
+}
+
+.menu {
+    display: flex;
+    justify-content: center;
+
+}
 
 h2 {
     color: #333;
@@ -16,33 +39,52 @@ h2 {
     font-weight: 500;
 }
 
-span{
+span {
     color: #017143;
     font-size: 70px;
     font-weight: 900;
 }
 
-p{
+p {
     font-size: 16px;
 }
 
-button{
+button {
      background-color: #017143;
      color: #ffff;
      border: none;
      border-radius: 40px;
      cursor: pointer;
      padding: 8px;
+     margin-top: 20px;
 }
 
 .logo {
     width: 80px;
 }
 
-.starbucks{
-    width: 500px;
+.starbucks {
+    width: 350px;
 }
 
-.botao-menu{
-    width: 100PX;
+.botao-menu {
+    width: 60PX;
+    cursor: pointer;
+    transition: 1s;
+    margin: 15px;
+}
+
+.botao-menu:hover {
+    transform: translateY(-25px) ;
+}
+
+.circulo{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #017143;
+    top: 0;
+    left: 0;
+    clip-path: circle(600px at right 800px);
+    z-index: -1 ;
 }
