--- a/style.css
+++ b/style.css
@@ -5,9 +5,15 @@
     font-family: "Poppins", sans-serif;
 }
 
-body {
-    padding: 20px 100px;
-}    
+.container {
+    position: relative; 
+    min-height: 100%;
+    /*padding: 20px 100px 100px 0;*/
+    margin-left: 50px;
+    padding-top: 20px;
+    padding-right: 100px;
+    padding-left: 100px;
+}   
 
 .conteudo{
     width: 100%;
@@ -20,11 +26,11 @@ body {
     width: 600px ;
 }
 
-.box-imagem {
+.box-image {
   width: 600px;  
   display: flex;
   justify-content: flex-end;
-  /* margin-top: 250px; */
+  margin-top: 250px; 
 }
 
 .menu {
@@ -57,6 +63,12 @@ button {
      cursor: pointer;
      padding: 8px;
      margin-top: 20px;
+    transition: 0.5s ease-in-out;
+}
+
+button:hover {
+    background-color: #014f2e;
+   transform: scale(1.05);
 }
 
 .logo {
@@ -71,14 +83,14 @@ button {
     width: 60PX;
     cursor: pointer;
     transition: 1s;
-    margin: 15px;
+    margin: 10px;
 }
 
 .botao-menu:hover {
     transform: translateY(-25px) ;
 }
 
-.circulo{
+.circle{
     position: absolute;
     width: 100%;
     height: 100%;
