ajuste de estilização e criação do JS

--- a/style.css
+++ b/style.css
@@ -8,11 +8,10 @@
 .container {
     position: relative; 
     min-height: 100%;
-    /*padding: 20px 100px 100px 0;*/
     margin-left: 50px;
-    padding-top: 20px;
-    padding-right: 100px;
-    padding-left: 100px;
+    /*padding-top: 20px;
+    padding-left: 100px;*/
+    padding-right: 80px;
 }   
 
 .conteudo{
@@ -20,17 +19,19 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-top: 10px;
 }
 
 .box-text {
     width: 600px ;
+    
 }
 
 .box-image {
   width: 600px;  
   display: flex;
   justify-content: flex-end;
-  margin-top: 250px; 
+  margin-top: 150px; /* antes 250px - estava desestruturando a página */
 }
 
 .menu {
@@ -73,6 +74,7 @@ button:hover {
 
 .logo {
     width: 80px;
+    margin-top: 40px;
 }
 
 .starbucks {
@@ -97,6 +99,6 @@ button:hover {
     background: #017143;
     top: 0;
     left: 0;
-    clip-path: circle(600px at right 800px);
+    clip-path: circle(600px at right 1000px);
     z-index: -1 ;
 }
